<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:elevation="3dp"
    android:background="@drawable/list_item_background">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/list_item_imageHolder_l"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_default"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/shopping_bag_2"
        app:riv_border_color="?attr/colorOnPrimary"
        app:riv_corner_radius="20dip"
        app:riv_mutate_background="true" />

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/list_item_name_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/New_item_name"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_currency_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_currency"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_item_cost_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/place_holder_item_amount"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|end"
        android:orientation="vertical">


<!--        <RadioButton-->
<!--            android:id="@+id/radioButton"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            />-->
    </LinearLayout>

</LinearLayout>