<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_ViewItem">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundedImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/shopping_bag_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundedImageView"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/view_item_gallery_btn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_gallery_btn"
            android:elevation="3dp"
            android:src="@android:drawable/ic_menu_gallery"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/view_item_camera_btn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_camera_btn"
            android:elevation="3dp"
            android:src="@android:drawable/ic_menu_camera"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/view_item_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/New_item_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/view_itme_cost"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_item_description"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/view_item_update_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default_border"
        android:text="@string/common_google_play_services_update_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/view_maps_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_default"
                app:srcCompat="@android:drawable/ic_dialog_map"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/item_map_pin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:editable="true"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>